Creacion de modulo predeterminado para PrimeNG

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<h1>Hola mundo</h1>
-
-<button
-    pButton
-    pRipple
-    label="Submit"
-    class="p-button-success">
-</button>
+<shared-menu></shared-menu>
