--- a/src/app/products/pages/order/order.component.html
+++ b/src/app/products/pages/order/order.component.html
@@ -1,3 +1,3 @@
 <p-panel header="Pipes personalizados" class="p-1">
-  <p>Pipes personalizados - creados por {{'nosotros' | toggleCase}}</p>
+  <p>Pipes personalizados - hechos por {{'nosotros' | toggleCase}}</p>
 </p-panel>
