--- a/src/app/products/pages/order/order.component.html
+++ b/src/app/products/pages/order/order.component.html
@@ -1,3 +1,14 @@
 <p-panel header="Pipes personalizados" class="p-1">
-  <p>Pipes personalizados - hechos por {{'nosotros' | toggleCase}}</p>
+  <p>Pipes personalizados - hechos por {{'nosotros' | toggleCase:true}}</p>
 </p-panel>
+
+<p-toolbar>
+  <div class="p-toolbar-group-start">
+    <p-button label="ToggleCase" icon="pi pi-search"/>
+  </div>
+  <div class="p-toolbar-group-end">
+    <p-button class="mr-2" label="Por nombre" icon="pi pi-sort" styleClass="p-button-success"/>
+    <p-button class="mr-2" label="Por volar" icon="pi pi-sort" styleClass="p-button-danger"/>
+    <p-button class="mr-2" label="Por color" icon="pi pi-sort" styleClass="p-button-help"/>
+  </div>
+</p-toolbar>
